Добавил вроде все, Но не знаю как нормально сделать через configuration отступ в кнопке(
По этому и весит предупреждение!

--- a/Login Screen/Sources/Storyboards/Base.lproj/Main.storyboard
+++ b/Login Screen/Sources/Storyboards/Base.lproj/Main.storyboard
@@ -22,6 +22,12 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Z0-Ia-QkN">
+                                <rect key="frame" x="35" y="91" width="317" height="264"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="fbIcon" title="Button"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -33,6 +39,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="fbIcon" width="250" height="250"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
